[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-markdown"
version = "1.0.0"
authors = [
  { name="Arad Fadaei", email="arad@fadaei.dev" },
]
description = "A simple markdown package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]